:bug: Fix colorpicker overlay z-index

--- a/src/css/night-react/components/_colorPicker.sass
+++ b/src/css/night-react/components/_colorPicker.sass
@@ -18,6 +18,7 @@
     +element(overlay)
       @include border-top-radius(4px)
       position: absolute
+      z-index: 4
       bottom: 100%
       right: 0
       display: table
